bug(ttl/fellows): fix pagination alignment and attribute styles
- pagination of fellow performance is centrally aligned
- average per attribute row bolder and white to be more distinct

[Fixes #165941921]

--- a/src/components/TableComponents/Row/row.css
+++ b/src/components/TableComponents/Row/row.css
@@ -36,7 +36,8 @@
 .dashboard-table__column-stat:nth-child(1),
 .dashboard-table__column-stat:nth-child(2) {
   background-color: #0459e4 !important;
-  color: #d7dde0;
+  color: #fff;
+  font-weight: bold;
 }
 .dashboard-table__column-stat:nth-child(n + 2) {
   width: 186px !important;
